# llm_fine_tuning

./: pyproject.toml  utils.py
paramem/: create_benchmark.py  data.py  extract_hidden.py  fetch_triples_and_aliases.py  filter_triples.py  fine_tune.py  fra_tokens.py  graph.py  layer_analysis.py  load_distrib_model.py  paraph.py  pile_sf_analysis.py  probing_task_extract_final_representations.py  slot_filling.py  slurm.sh  test.py  utils.py  weight_difference.py
paramem/lens/: train_lens.sh  tuned_lens_analysis.py
scripts/: acc_test.sh  download_wikidata.sh  eval_contextual.sh  eval_ft.sh  fine_tune.sh  fra_soft.sh  hidden_extractor.sh  layer_analysis.sh  probes.sh  slot_filling.sh  slurm.sh
