[tool.poetry]
name = "paramem"
version = "0.1.0"
description = ""
authors = ["mahautm <mateo.mahaut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "^2.0.1", source = "torch" }
accelerate = "^0.31.0"
deepspeed = "^0.14.2"
pandas = "^2.2.2"
trl = "^0.8.6"
transformers = "^4.41.2"
fairscale = "^0.4.13"
tuned-lens = {path = "tuned-lens"}
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
